--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -66,13 +66,9 @@
     font-weight: $lighter_font_weight;
     margin-top: 5px;
     color: $primary_color;
-    line-height: 26px;
     letter-spacing: 0.3px;
     & p{
         font-size: $p_font_size;
-        &:nth-last-child(1){
-            // margin-top: 15px;
-        }
     }
 
     & p2{
@@ -216,10 +212,6 @@ button {
         height: 100vh;
         display: flex;
     }
-
-    &__post{
-        // display: flex;
-    }
 }
 
 main{
@@ -292,19 +284,19 @@ footer{
     &.primary {
         & .chip__button{
             border: 2px solid $secondary_color_2;
-            border-radius: 10px;
-            padding: 6px 15px;
+            border-radius: 8px;
+            padding: 8px 15px;
             transition: all 0.5s ease;
             font-size: $p_font_size;
             background-color: $bg_color;
             &:hover{
-                background-color: rgba(0, 0, 0, 0.57);
+                background-color: rgba(0, 0, 0, 0.5);
                 color: $accent_color;
                 border: 2px solid $accent_color;
             }
     
             &.active{
-                background-color: rgba(0, 0, 0, 0.57);
+                background-color: rgba(0, 0, 0, 0.5);
                 color: $accent_color;
                 border: 2px solid $accent_color;
             }
@@ -399,9 +391,8 @@ hr{
 
 .select{
     position: relative;
-    min-width: 170px;
     &__button{
-        width: 100%;
+        min-width: 200px;
         background-color: $bg_color;
         border: 2px solid $secondary_color_2;
         display: flex;
@@ -409,6 +400,7 @@ hr{
         padding: 12px 20px;
         color: $primary_color !important;
         border-radius: 10px;
+        word-break:keep-all;
         & svg{
             margin-left: 15px;
             transition: 0.1s ease transform;
@@ -562,7 +554,6 @@ textarea{
         & h4,
         & p{
             background-image: linear-gradient(to left, $secondary_color 50%, $primary_color 50%);
-            -webkit-background-clip: text;
             color: transparent;
             background-size: 200% 100%;
             background-repeat: no-repeat;
