--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -26,7 +26,7 @@ $light_font_weight: 500;
 $lighter_font_weight: 400;
 // margin and padding
 $mb_auto: 0 auto;
-$pd_big: 200px 0;
+$pd_big: 170px 0;
 $pd_medium: 130px 0;
 $pd_small: 60px 0;
 $pd_block: 60px 60px;
@@ -42,10 +42,11 @@ $z_modal: 999;
 $z_background: -2;
 // media breakpoints
 $breakpoint_desktop: 1550px;
-$breakpoint_laptop: 1045px;
-$breakpoint_tablet: 830px;
-$breakpoint_phone: 700px;
-$breakpoint_phone_two: 515px;
+$breakpoint_laptop: 1200px;
+$breakpoint_laptop2: 1010px;
+$breakpoint_tablet: 850px;
+$breakpoint_phone: 615px;
+$breakpoint_phone_two: 470px;
 // border radius
 $input_radius: 10px;
 $button_radius: 30px;
