--- a/src/styles/adaptive.scss
+++ b/src/styles/adaptive.scss
@@ -1,1 +1,334 @@
 @import 'style';
+
+@media screen and (max-width: $breakpoint_laptop){
+    .header{
+        &__nav{
+            &-li{
+                margin: 0 20px;
+            }
+        }
+    }
+
+    .container{
+        max-width: 1000px;
+    }
+}
+
+@media screen and (max-width: $breakpoint_laptop2) {
+    .header{
+        &__nav{
+            &-ol{
+                display: none;
+            }
+            
+            &-menu{
+                display: block;
+            }
+        }
+        
+    }
+
+    .about{
+        &__inner{
+            flex-direction: column;
+            gap: 50px;
+        }
+        &__visual{
+            width: 100%;
+        }
+        &__content{
+            width: 100%;
+        }
+        &__picture{
+            &-one,
+            &-two{
+                width: 100%;
+            }
+            &-two{
+                transform: translate(-50px, -50px) rotate(6deg);
+            }
+            &-one{
+                transform: translate(50px, 50px) rotate(-8deg);
+            }
+        }
+    }
+
+    .inner{
+        padding: 60px 0;
+        &__big{
+            padding: 140px 0;
+        }
+    }
+
+    .container{
+        padding: 0 30px;
+        &__fluid{
+            padding: 0 30px;
+        }
+    }
+
+    .block{
+        &__inner{
+            flex-direction: column;
+            gap: 40px;
+        }
+        &__heading{
+            position: inherit;
+            height: auto;
+            width: 100%;
+        }
+        &__content{
+            width: 100%;
+        }
+    }
+
+    .project{
+        &__block{
+            flex-direction: column;
+            gap: 60px;
+            &-tags{
+                width: 100%;
+            }
+            &-gallery{
+                width: 100%;
+            }
+            &-title{
+                position: static;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: $breakpoint_tablet) {
+    .projects{
+        &__list{
+            &-items{
+                grid-template-columns: 1fr 1fr;
+            }
+        }
+    }
+
+    .contact{
+        &__content{
+            padding: 0;
+        }
+        &__container{
+            flex-direction: column-reverse;
+            gap: 40px;
+        }
+        &__form{
+            width: 100%;
+        }
+        &__social{
+            width: 100%;
+        }
+    }
+}
+
+@media screen and (max-width: $breakpoint_phone) {
+    *{
+        cursor:auto !important;
+    }
+    body{
+        cursor: auto !important;
+    }
+    .cursor{
+        display: none;
+    }
+    .block{
+        &__content{
+            &-stat{
+                width: 30%;
+                flex: initial;
+            }
+            &-stats{
+                justify-content: space-between;
+            }
+            &-projects{
+                grid-template-columns: 1fr;
+            }
+        }
+    }
+
+    .projects{
+        &__list{
+            &-items{
+                grid-template-columns: 1fr;
+            }
+            &-filter{
+                &_up{
+                    flex-direction: column;
+                    gap: 10px;
+                }
+                &_search{
+                    width: 100%;
+                }
+                &_select{
+                    width: 100%;
+                }
+            }
+        }
+    }
+
+    .select{
+        width: 100%;
+        &__button{
+            width: 100%;
+        }
+    }
+
+    .contact{
+        &__banner{
+            border-radius: 20px;
+            padding: 30px;
+            &-buttons{
+                justify-content: space-between;
+            }
+            &-button{
+                width: 50%;
+            }
+        }
+    }
+
+    .footer{
+        &__upper{
+            flex-direction: column;
+            gap: 20px;
+            align-items: flex-start;
+        }
+        &__nav{
+            display: none;
+            &-ol{
+                flex-wrap: wrap;
+                gap: 20px;
+            }
+        }
+        &__lower{
+            flex-direction: column-reverse;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+        &__details{
+            width: 100%;
+            display: none;
+        }
+    }
+
+    .project{
+        &__block{
+            &-gallery{
+                column-count: 1;
+            }
+        }
+    }
+
+    .link{
+        font-size: 16px;
+    }
+
+    .title{
+        h1{
+            font-size: 45px;
+        }
+        h2 {
+            font-size: 24px;
+        }
+
+        h3{
+            font-size: 18px;
+        }
+    }
+
+    .info{
+        & p{
+            font-size: 16px;
+            margin-top: 0;
+        }
+    }
+
+    .about{
+        &__visual{
+            padding: 0px;
+        }
+    }
+
+
+
+    .experience{
+        &__item{
+            &-arrow{
+                display: none;
+            }
+            &-right{
+                padding: 15px 25px 10px 25px;
+                margin-left: 70px;
+            }
+            &-title{
+                & h3{
+                    margin-bottom: 0;
+                }
+            }
+            &-left{
+                width: 70px;
+            }
+        }
+    }
+
+    .notification{
+        &__list{
+            padding: 0 30px;
+            width: 100%;
+            right: 0;
+        }
+    }
+    .not-found{
+        &__visual{
+            &-digit{
+                font-size: 10vh;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: $breakpoint_phone_two) {
+    .block{
+        &__content{
+            &-stats{
+                gap: 20px;
+                flex-wrap: wrap;
+            }
+            &-stat{
+                width: 100%;
+            }
+        }
+    }
+
+    .contact{
+        &__banner{
+            border-radius: 20px;
+            padding: 30px;
+            &-buttons{
+                flex-direction: column;
+                gap: 10px;
+            }
+            &-button{
+                width: 100%;
+            }
+            &-visual{
+                display: none;
+            }
+            &-left{
+                display: flex;
+                flex-direction: column;
+                // gap: 40px;
+            }
+        }
+
+        &__form{
+            &-inputs{
+                flex-direction: column;
+            }
+        }
+    }
+
+}
