--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -289,6 +289,7 @@ footer{
             transition: all 0.5s ease;
             font-size: $p_font_size;
             background-color: $bg_color;
+            color: $primary_color;
             &:hover{
                 background-color: rgba(0, 0, 0, 0.5);
                 color: $accent_color;
@@ -296,9 +297,9 @@ footer{
             }
     
             &.active{
-                background-color: rgba(0, 0, 0, 0.5);
-                color: $accent_color;
-                border: 2px solid $accent_color;
+                background-color: rgba(0, 0, 0, 0.5) !important;
+                color: $accent_color !important;
+                border: 2px solid $accent_color !important;
             }
         }
 
