--- a/src/styles/adaptive.scss
+++ b/src/styles/adaptive.scss
@@ -228,7 +228,7 @@
 
     .title{
         h1{
-            font-size: 45px;
+            font-size: 36px;
         }
         h2 {
             font-size: 24px;
@@ -249,6 +249,18 @@
     .about{
         &__visual{
             padding: 0px;
+            position: relative;
+        }
+        &__picture{
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+            padding: 70px;
+            &-two{
+
+            }
         }
     }
 
@@ -260,8 +272,8 @@
                 display: none;
             }
             &-right{
-                padding: 15px 25px 10px 25px;
-                margin-left: 70px;
+                padding: 15px 0 15px 20px;
+                margin-left: 40px;
             }
             &-title{
                 & h3{
@@ -269,7 +281,20 @@
                 }
             }
             &-left{
-                width: 70px;
+                width: 40px;
+            }
+            &-year{
+                & span{
+                    transform: rotate(-90deg);
+                    font-size: 16px;
+                }
+            }
+            &-details{
+                &.info{
+                    & p{
+                        margin-top: 20px;
+                    }
+                }
             }
         }
     }
@@ -286,6 +311,18 @@
             &-digit{
                 font-size: 10vh;
             }
+        }
+    }
+
+    .landing{
+        text-align: left;
+        &__signature{
+            display: none;
+        }
+        &__inner{
+            height: auto;
+            min-height: auto;
+            padding: 200px 0;
         }
     }
 }
@@ -324,6 +361,14 @@
             }
         }
 
+        &__social{
+            &-links{
+                flex-wrap: nowrap;
+                justify-content: space-between;
+                gap: 0;
+            }
+        }
+
         &__form{
             &-inputs{
                 flex-direction: column;
@@ -331,4 +376,31 @@
         }
     }
 
+    .chip{
+        &.primary {
+            & .chip__button{
+                &:hover{
+                    border: 2px solid $secondary_color_2;
+                    background-color: $bg_color;
+                    color: $primary_color;
+                }
+            }
+    
+            // &.img{
+            //     & .chip__button{
+            //         padding: 15px;
+            //         border-radius: 50%;
+            //         line
+            //     }
+            // }
+        }
+    
+        &.secondary{
+            & .chip__button{
+                &:hover{
+                    background-color: rgba(255, 255, 255, 0.6);
+                }
+            }
+        }
+    }
 }
