--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,4 +1,4 @@
-@import 'vars';
+@use 'vars' as *;
 
 .container {
     margin: $mb_auto;
@@ -315,22 +315,21 @@ footer{
     &.secondary{
         & .chip__button{
             border-radius: 20px;
-            padding: 8px 17px;
+            padding: 6px 13px;
             transition: all 0.5s ease;
             font-size: $p2_font_size !important;
             // background-color: $secondary_color_3;
-            background-color: rgba(255, 255, 255, 0.6);
+            backdrop-filter: blur(10px);
             // &:hover{
             //     background-color: $accent_color_2;
             //     color: $bg_color;
             // }
             color: $primary_color !important;
-    
+            border: 1.5px solid rgba(205, 205, 205, 0.5);
+            font-weight: 100 !important;
+            background-color: rgba(255, 255, 255, 0.5);
             &.active{
                 border: none;
-                background-color: $bg_color;
-            }
-            &:hover{
                 background-color: $bg_color;
             }
         }
