--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -1,6 +1,6 @@
-@import 'global';
-@import 'vars';
-@import 'reset';
+@use 'global' as *;
+@use 'vars' as *;
+@use 'reset' as *;
 
 .notification {
     background: rgba(0, 0, 0, 0.7);
@@ -112,21 +112,35 @@
     transform: translateY(-100%);
     transition: 0.4s ease all;
     background: rgba(255, 255, 255, 0);
+    padding-top: 35px;
+    &:hover{
+        & .header__inner{
+            backdrop-filter: saturate(180%) blur(10px);
+            background: rgba(255, 255, 255, 0.6);
+            // border: 1.5px solid $secondary_color_3;
+            border: 1.5px solid rgba(205, 205, 205, 0.5);
+        }
+    }
     &.sticky{
         transform: translateY(0%);
 
     }
     &.active{
-        
-        box-shadow: inset 0 -1px 0 0 var(#111);
-        backdrop-filter: saturate(180%) blur(10px);
-        background: rgba(255, 255, 255, 0.7);
+        & .header__inner{
+            backdrop-filter: saturate(180%) blur(10px);
+            background: rgba(255, 255, 255, 0.6);
+            border: 1.5px solid rgba(205, 205, 205, 0.5);
+        }
     }
     &__inner{
-        padding: $pd_nav;
+        padding: 25px 40px;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        border-radius: 25px;
+        border: 1.5 solid transparent;
+        background: rgba(255, 255, 255, 0);
+        transition: 0.4s ease all;
     }
     &__nav{
         display: flex;
@@ -137,7 +151,6 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            // gap: 35px;
         }
         &-li{
             margin: 0 35px;
@@ -151,22 +164,6 @@
             &_image{
                 width: 45px;
                 height: 45px;
-                border-radius: 50%;
-            }
-        }
-        &-status{
-            display: flex;
-            gap: 50px;
-            align-items: center;
-            background-color: $accent_color;
-            color: $bg_color;
-            padding: 0 15px;
-            line-height: 30px;
-            border-radius:5px;
-            &_circle{
-                width: 13px;
-                height: 13px;
-                background-color: rgb(0, 127, 57);
                 border-radius: 50%;
             }
         }
@@ -227,7 +224,6 @@
         display: none;
         &-img{
             width: 35px;
-            // height: 70px;
             transition: 0.1s ease;
             display: flex;
             flex-direction: column;
@@ -284,7 +280,7 @@
                 position: absolute;
                 stroke-dasharray: 400%;
                 stroke-dashoffset: 0;
-                animation: dash 2s alternate linear;
+                animation: dash 2.5s alternate linear;
                 stroke: $bg_color;
                 mix-blend-mode: exclusion;
             }
@@ -293,16 +289,14 @@
     &__title{
         & h1{
             font-size: $big_font_size;
-    color: $bg_color !important;
+            color: $bg_color !important;
             mix-blend-mode: exclusion;
         }
     }
     &__info{
         & p{
-            // color: $primary_color;
-    color: $bg_color !important;
-    mix-blend-mode: exclusion;
-
+            color: $bg_color !important;
+            mix-blend-mode: exclusion;
         }
     }
 }
@@ -378,7 +372,7 @@ body{
         &__heading{
             position: sticky;
             left: 0;
-            top: 110px;
+            top: 120px;
             height: 10px;
             width: 25%;
             bottom: 100px;
@@ -437,6 +431,7 @@ body{
     }
 
 .project-card{
+    position: relative;
     &__visual{
         margin-bottom: 10px;
         position: relative;
@@ -454,18 +449,31 @@ body{
             width: 100%;
             aspect-ratio: 1.5 /1;
             border-radius: 15px;
-            background-color: $secondary_color_2;
-
+            background-color: $secondary_color_3;
+            border: 1.5px solid $secondary_color_3;
+            &:hover{
+                border: 1.5px solid $secondary_color_3;
+            }
         }
     }
     &__content{
         padding: 8px;
     }
+    &__categories{
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        padding: 20px;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        gap: 10px;
+    }
     &__info{
         overflow: hidden;
    display: -webkit-box;
-   -webkit-line-clamp: 2; /* number of lines to show */
-           line-clamp: 2; 
+   -webkit-line-clamp: 3; /* number of lines to show */
+           line-clamp: 3; 
    -webkit-box-orient: vertical;
     }
 }
@@ -1158,12 +1166,15 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    // border: 2px solid $primary_color;
+    // background-color: rgba(255, 255, 255, 0.3);
+    // backdrop-filter: blur(1px);
     &.color{
         border: 2px solid $bg_color;
     }
     &.pointer{
-        width: 25px;
-        height: 25px;
+        width: 35px;
+        height: 35px;
     }
     &.card{
         border: 2px solid $primary_color;
