--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -127,9 +127,10 @@
     }
     &.active{
         & .header__inner{
-            backdrop-filter: saturate(180%) blur(10px);
+            backdrop-filter: blur(10px);
             background: rgba(255, 255, 255, 0.6);
             border: 1.5px solid rgba(205, 205, 205, 0.5);
+            
         }
     }
     &__inner{
@@ -547,15 +548,30 @@ body{
 
 .contact{
     &__banner{
-        padding: 40px;
-        border: 1px solid $secondary_color_2;
+        padding: 20px;
         border-radius: 25px;
         overflow: hidden;
         position: relative;
+        display: flex;
+        justify-content: center;
+        &::before{
+            position: absolute;
+            content: '';
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(to left, rgba(255,255,255,0) 0%, $accent_color 90%, $accent_color 100%);
+            z-index: -1;
+        }
         &-buttons{
-            margin-top: 20px;
             display: flex;
             gap: 20px;
+            backdrop-filter: blur(1px);
+            // background-color: rgba(20, 20, 20, 0.5);
+            // padding: 20px 40px;
+            border-radius: 20px;
+
         }
         &-visual{
             position: absolute;
@@ -563,10 +579,25 @@ body{
             top: 0;
             height: 100%;
             width: 100%;
-            z-index: -1;
+            z-index: -2;
         }
         &-info{
             margin-top: 20px;
+            color: $bg_color;
+        }
+        &-title{
+            &.title{
+                color: $bg_color;
+            }
+        }
+        &-content{
+            // background-color: rgba(20, 20, 20, 0.6);
+            padding: 20px;
+            border-radius: 20px;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
     }
 }
