--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -548,12 +548,13 @@ body{
 
 .contact{
     &__banner{
-        padding: 20px;
+        padding: 40px;
         border-radius: 25px;
         overflow: hidden;
         position: relative;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
+        align-items: center;
         &::before{
             position: absolute;
             content: '';
@@ -565,12 +566,13 @@ body{
             z-index: -1;
         }
         &-buttons{
-            display: flex;
+            // display: flex;
             gap: 20px;
             backdrop-filter: blur(1px);
             // background-color: rgba(20, 20, 20, 0.5);
             // padding: 20px 40px;
             border-radius: 20px;
+            align-self: flex-end;
 
         }
         &-visual{
@@ -582,8 +584,12 @@ body{
             z-index: -2;
         }
         &-info{
-            margin-top: 20px;
+            margin-top: 15px;
             color: $bg_color;
+            // display: none;
+            &.info{
+                margin-bottom: 0;
+            }
         }
         &-title{
             &.title{
@@ -592,12 +598,18 @@ body{
         }
         &-content{
             // background-color: rgba(20, 20, 20, 0.6);
-            padding: 20px;
+            // padding: 20px;
             border-radius: 20px;
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            // width: 100%;
+        }
+        &-button{
+            &:hover{
+                backdrop-filter: saturate(180%) blur(10px);
+                background: rgba(0, 0, 0, 0.3) !important;
+                // border: 1.5px solid $secondary_color_3;
+                // border: 1.5px solid rgba(205, 205, 205, 0.5) !important;
+                // color: $fg_color !important;
+            }
         }
     }
 }
@@ -683,6 +695,20 @@ body{
 .skills{
     position: relative;
     background-color: $accent_color;
+    background-image: url('/images/banner-three.png');
+    z-index: 0;
+    &::before{
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background: radial-gradient(rgba(0, 0, 0, 0.7), $accent_color);
+        background-position: 400px;
+        z-index: -1;
+        
+    }
     &__list{
         margin-top: 60px;
     }
@@ -710,7 +736,7 @@ body{
             }
         }
         &-chip{
-            background-color: $bg_color;
+            // background-color: $bg_color;
             border-radius: 40px;
             & button{
                 font-weight: $medium_font_weight;
@@ -893,13 +919,13 @@ body{
 }
 
 .achievements{
-    &__list{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        // grid-template-rows: ;
-        gap: 20px;
-        margin-top: 40px;
-    }
+    // &__list{
+    //     display: grid;
+    //     grid-template-columns: 1fr 1fr;
+    //     // grid-template-rows: ;
+    //     gap: 20px;
+    //     margin-top: 40px;
+    // }
     &__item{
         display: flex;
         border: 1px solid $secondary_color_2;
@@ -1367,5 +1393,78 @@ body{
     }
     &.active{
         top: 0;
+    }
+}
+
+.dither-container {
+  width: 100% ;
+  height: 100%;
+  position: absolute !important;
+  left: 0;
+  top: 0;
+  z-index: -2;
+}
+
+.achievements{
+    &__list{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        // grid-template-rows: ;
+        gap: 20px;
+        margin-top: 60px;
+    }
+    &__title{
+        text-align: center;
+        margin-bottom: 10px;
+    }
+    &__info{
+        text-align: center;
+        color: $secondary_color;
+    }
+}
+
+.achievement{
+    &__card{
+        position: relative;
+        border-radius: 25px;
+        padding: 30px;
+        overflow: hidden;
+        // max-height: 500px;
+        border: 3px solid $primary_color;
+
+        &-content{
+            // z-index: 1;
+            
+        }
+        &::before{
+            position: absolute;
+            left: 0;
+            top: 0;
+            content: '';
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            z-index: -1;
+        }
+        &-title{
+            &.title{
+                color: $bg_color;
+                & h3{
+                    font-weight: $bold_font_weight;
+                }
+            }
+            margin-bottom: 15px;
+        }
+        &-info{
+            &.info{
+                color: $bg_color;
+            }
+        }
+        &-buttons{
+            display: flex;
+            gap: 10px;
+            margin-top: 30px;
+            float:right;
+        }
     }
 }
