--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -116,7 +116,7 @@
     &:hover{
         & .header__inner{
             backdrop-filter: saturate(180%) blur(10px);
-            background: rgba(255, 255, 255, 0.6);
+            background: rgba(255, 255, 255, 0.5);
             // border: 1.5px solid $secondary_color_3;
             border: 1.5px solid rgba(205, 205, 205, 0.5);
         }
@@ -128,17 +128,18 @@
     &.active{
         & .header__inner{
             backdrop-filter: blur(10px);
-            background: rgba(255, 255, 255, 0.6);
+            background: rgba(255, 255, 255, 0.5);
             border: 1.5px solid rgba(205, 205, 205, 0.5);
             
         }
     }
     &__inner{
-        padding: 25px 40px;
+        padding: 25px 45px;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        border-radius: 25px;
+        // border-radius: 25px;
+        border-radius: 50px;
         border: 1.5 solid transparent;
         background: rgba(255, 255, 255, 0);
         transition: 0.4s ease all;
@@ -466,9 +467,15 @@ body{
         top: 0px;
         padding: 20px;
         width: 100%;
-        height: 100%;
         display: flex;
+        flex-wrap: wrap;
         gap: 10px;
+        transition: all 0.5s ease;
+        &.active{
+            & .project-card__category{
+                // opacity: 0;
+            }
+        }
     }
     &__info{
         overflow: hidden;
@@ -1024,6 +1031,7 @@ body{
         display: flex;
         gap: 10px;
         margin-top: 10px;
+        flex-wrap: wrap;
     }
     &__filters{
         display: flex;
